--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,10 +2,14 @@ doctype html
 html
   head
     title IOgram
+    link(rel = 'stylesheet', href = 'style/reset.css')
+    link(rel = 'stylesheet', href = 'style/main.css')
     block head
+    
   body
-    main
       block content
     footer
       detail
         p built by mala23
+
+    script(src = 'js/chat.js')
